--- a/whoai_gem.html
+++ b/whoai_gem.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no" />
 <title>WHOAI Gem</title>
 <style>
   html,body{margin:0;height:100%;overflow:hidden;background:#000;color:#fff;
     font-family:system-ui,-apple-system,Segoe UI,Roboto,'Noto Sans JP',sans-serif;
-    touch-action:none; overscroll-behavior:none;}
+    touch-action:none; overscroll-behavior:none}
+
+  /* 背景 */
   .bg{position:fixed;inset:0;background-size:cover;background-position:center;opacity:0;transition:opacity .7s}
   .bg.show{opacity:1}
 
   /* WHOAI（ドラッグで砂を削る） */
-  #whoaiWrap{position:fixed;left:5vw;bottom:12vh;z-index:5;touch-action:none}
+  #whoaiWrap{position:fixed;left:5vw;bottom:12vh;z-index:5;touch-action:none;display:none}
   #whoai{width:clamp(82px,12vw,140px);user-select:none;animation:hop 2s infinite}
   @keyframes hop{0%,100%{transform:translateY(0)}50%{transform:translateY(-14px)}}
   .bubble{position:absolute;left:50%;bottom:100%;transform:translate(-50%,-8px);
@@ -20,13 +22,13 @@
           box-shadow:0 2px 6px rgba(0,0,0,.25);opacity:0;transition:.18s}
   .bubble.show{opacity:1;transform:translate(-50%,-12px)}
 
-  /* バケツ */
+  /* バケツ（中央にカウンタ） */
   #bucket{position:fixed;right:2vw;bottom:7vh;z-index:4;width:clamp(74px,14vw,160px)}
   #bucket img{width:100%;display:block}
   #counter{position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);
-           background:#fff;color:#111;border-radius:999px;padding:4px 8px;font-weight:600}
+           background:#fff;color:#111;border-radius:999px;padding:4px 8px;font-weight:600;pointer-events:none}
 
-  /* 砂キャンバス ＆ 貝 */
+  /* 砂キャンバス & 貝 */
   #sand{position:fixed;inset:0;z-index:2;touch-action:none}
   .shell{position:fixed;z-index:3;width:clamp(48px,6vw,72px);height:clamp(48px,6vw,72px);
          transform:translate(-50%,-50%) scale(.92);
@@ -39,6 +41,16 @@
   #toast{position:fixed;left:10px;top:10px;z-index:10;background:rgba(0,0,0,.6);padding:6px 12px;border-radius:8px}
   .ui{position:fixed;left:50%;bottom:10px;transform:translateX(-50%);display:flex;gap:8px;z-index:10}
   .ui button{padding:6px 12px;border:none;border-radius:10px;cursor:pointer}
+
+  /* キャラ選択パネル */
+  .panel{position:fixed;inset:0;z-index:12;background:rgba(0,0,0,.55);display:none;align-items:center;justify-content:center}
+  .panel.show{display:flex}
+  .card{background:#fff;color:#111;border-radius:14px;padding:16px;width:min(92svw,980px);max-height:80svh;overflow:auto}
+  .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(120px,1fr));gap:12px}
+  .choice{border:1px solid #eee;border-radius:12px;padding:8px;text-align:center;cursor:pointer;transition:transform .12s}
+  .choice:hover{transform:translateY(-2px)}
+  .choice img{max-width:100%;height:auto;display:block;margin:0 auto 6px}
+  .close{margin-top:10px;padding:6px 12px;border:none;border-radius:8px;cursor:pointer}
 </style>
 </head>
 <body>
@@ -62,43 +74,54 @@
   <!-- 砂 -->
   <canvas id="sand"></canvas>
 
-  <!-- UI -->
+  <!-- トースト & UI -->
   <div id="toast"></div>
   <div class="ui">
-    <button id="btnStart">はじめる</button>
+    <button id="btnStart">スタート</button>
+    <button id="btnBegin">はじめに</button>
     <button id="btnNight">夜へ</button>
   </div>
 
+  <!-- キャラ選択 -->
+  <div id="charPanel" class="panel">
+    <div class="card">
+      <h2 style="margin-top:0">キャラを選んでね</h2>
+      <div id="charGrid" class="grid"></div>
+      <button class="close" onclick="closeCharPanel()">閉じる</button>
+    </div>
+  </div>
+
 <script>
-/* ====== 環境 ====== */
+/* === 基本UI === */
 const toast = document.getElementById('toast');
-const bubble= document.getElementById('bubble');
-const whoaiWrap = document.getElementById('whoaiWrap');
-const bucket = document.getElementById('bucket');
-const counter= document.getElementById('counter');
+const say = (s)=>toast.textContent=s;
 const bg = {
   sunrise: document.getElementById('bg-sunrise'),
   beach  : document.getElementById('bg-beach'),
   night  : document.getElementById('bg-night')
 };
-function say(s){ toast.textContent=s; }
-function scene(name){
-  Object.values(bg).forEach(e=>e.classList.remove('show'));
-  bg[name].classList.add('show');
-  currentScene=name;
-}
+let currentScene='sunrise';
+function scene(name){ Object.values(bg).forEach(e=>e.classList.remove('show')); bg[name].classList.add('show'); currentScene=name; }
 
-/* ====== 砂キャンバス ====== */
+/* === WHOAI & 吹き出し === */
+const whoaiWrap = document.getElementById('whoaiWrap');
+const whoai     = document.getElementById('whoai');
+const bubble    = document.getElementById('bubble');
+function showBubble(text){ bubble.textContent=text; bubble.classList.add('show'); setTimeout(()=>bubble.classList.remove('show'),900); }
+
+/* === バケツ === */
+const bucket  = document.getElementById('bucket');
+const counter = document.getElementById('counter');
+let count=0;
+
+/* === 砂キャンバス（深さあり） === */
 const sand = document.getElementById('sand');
 const ctx  = sand.getContext('2d',{willReadFrequently:true});
-const TILE=90;                // 深さタイル（大きすぎると軽いが演出弱 / 小さいと重い）
-const BRUSH=28;               // ブラシ半径
-let depth={}, brushed={};     // タイルごと 深さ(1..3) と こすり回数
+const TILE=90, BRUSH=28;
+let depth={}, brushed={};
 
 function resizeSand(){
-  sand.width = innerWidth;
-  sand.height= innerHeight;
-  // 砂を塗る（上が乾いて明るく、下は濃い）
+  sand.width = innerWidth; sand.height= innerHeight;
   const g=ctx.createLinearGradient(0,0,0,sand.height);
   g.addColorStop(0,'#E7D9B7'); g.addColorStop(.6,'#D9C79E'); g.addColorStop(1,'#C8B68F');
   ctx.fillStyle=g; ctx.fillRect(0,0,sand.width,sand.height);
@@ -106,93 +129,61 @@ function resizeSand(){
 function initDepth(){
   depth={}; brushed={};
   const cols=Math.ceil(sand.width/TILE), rows=Math.ceil(sand.height/TILE);
-  for(let c=0;c<cols;c++){
-    for(let r=0;r<rows;r++){
-      // 10%は固い(3回)、35%は中(2回)、残りは浅い(1回)
-      const p=Math.random();
-      depth[`${c},${r}`]=(p<.10)?3:(p<.45)?2:1;
-      brushed[`${c},${r}`]=0;
-    }
+  for(let c=0;c<cols;c++) for(let r=0;r<rows;r++){
+    const p=Math.random(); depth[`${c},${r}`]=(p<.10)?3:(p<.45)?2:1; brushed[`${c},${r}`]=0;
   }
 }
 function brushAt(x,y){
-  // 視覚：砂を削る
   ctx.globalCompositeOperation='destination-out';
   ctx.beginPath(); ctx.arc(x,y,BRUSH,0,Math.PI*2); ctx.fill();
   ctx.globalCompositeOperation='source-over';
-
-  // 論理：そのタイルの深さを消費
   const c=Math.floor(x/TILE), r=Math.floor(y/TILE), key=`${c},${r}`;
-  if(depth[key]===Infinity) return;         // すでに開通済み
-  if(depth[key]==null) return;              // 画面外など
-  const v=++brushed[key];
-  if(v>=depth[key]){ depth[key]=Infinity; maybeSpawnNear(x,y); }
+  if(depth[key]===Infinity || depth[key]==null) return;
+  if(++brushed[key] >= depth[key]){ depth[key]=Infinity; maybeSpawnNear(x,y); }
 }
 
-/* ====== WHOAI ドラッグ → その地点で brushAt ====== */
-let currentScene='sunrise';
+/* === WHOAIドラッグ＝砂を削る === */
 let wpid=null;
 whoaiWrap.addEventListener('pointerdown',e=>{
   e.preventDefault(); wpid=e.pointerId; whoaiWrap.setPointerCapture(wpid);
-});
+},{passive:false});
 whoaiWrap.addEventListener('pointermove',e=>{
   if(e.pointerId!==wpid) return; e.preventDefault();
-  // 位置更新
   const w=whoaiWrap.offsetWidth, h=whoaiWrap.offsetHeight;
   const x=Math.max(0,Math.min(innerWidth -w, e.clientX - w/2));
   const y=Math.max(0,Math.min(innerHeight-h, e.clientY - h/2));
   whoaiWrap.style.left=x+'px'; whoaiWrap.style.top=y+'px';
-  // 砂を削る
-  if(currentScene==='beach') brushAt(e.clientX, e.clientY);
-});
-whoaiWrap.addEventListener('pointerup',()=>{ wpid=null; });
-whoaiWrap.addEventListener('pointercancel',()=>{ wpid=null; });
+  if(currentScene==='beach') brushAt(e.clientX,e.clientY);
+},{passive:false});
+whoaiWrap.addEventListener('pointerup',()=>{ wpid=null; },{passive:false});
+whoaiWrap.addEventListener('pointercancel',()=>{ wpid=null; },{passive:false});
 
-/* ====== 貝の出現（間引き） ====== */
-const COMMON=[
-  './public/items/asari1.png','./public/items/asari2.png','./public/items/asari3.png'
-];
-const RARE=[
-  './public/items/aurora_shell.png','./public/items/flame_shell.png','./public/items/luminous_shell.png',
-  './public/items/mystic_shell.png','./public/items/night_sky_shell.png',
-  './public/items/rare_pearl.png','./public/items/rare_rainbow.png','./public/items/wave_shell.png'
-];
-const shells=[];                  // {el,x,y}
-const MAX_SHELLS=9;              // 上限
-const MIN_DIST=90;               // 最小距離
-const SPAWN_PROB=.32;            // タイル開通時の出現確率
+/* === 貝の出現（間引き：上限・最小距離・確率） === */
+const COMMON=['./public/items/asari1.png','./public/items/asari2.png','./public/items/asari3.png'];
+const RARE  =['./public/items/aurora_shell.png','./public/items/flame_shell.png','./public/items/luminous_shell.png','./public/items/mystic_shell.png','./public/items/night_sky_shell.png','./public/items/rare_pearl.png','./public/items/rare_rainbow.png','./public/items/wave_shell.png'];
+const shells=[]; const MAX_SHELLS=9, MIN_DIST=90, SPAWN_PROB=.32;
 
-function tooClose(x,y){
-  return shells.some(s=>Math.hypot(s.x-x,s.y-y)<MIN_DIST);
-}
+function tooClose(x,y){ return shells.some(s=>Math.hypot(s.x-x,s.y-y)<MIN_DIST); }
 function avoidBucket(x,y){
-  const b=bucket.getBoundingClientRect();
-  const cx=b.left+b.width/2, cy=b.top+b.height/2;
-  return Math.hypot(cx-x,cy-y)<120; // バケツ近すぎは避ける
+  const b=bucket.getBoundingClientRect(); const cx=b.left+b.width/2, cy=b.top+b.height/2;
+  return Math.hypot(cx-x,cy-y)<120;
 }
 function maybeSpawnNear(x,y){
   if(shells.length>=MAX_SHELLS) return;
-  if(Math.random()>SPAWN_PROB) return;        // 出ないこともある
+  if(Math.random()>SPAWN_PROB) return;
   let px=x+(Math.random()*2-1)*90, py=y+(Math.random()*2-1)*90;
   px=Math.max(50,Math.min(innerWidth -50,px));
   py=Math.max(90,Math.min(innerHeight-90,py));
   if(tooClose(px,py) || avoidBucket(px,py)) return;
 
-  const pool=Math.random()<0.8?COMMON:RARE;
-  const src=pool[Math.floor(Math.random()*pool.length)];
-  const el=document.createElement('div');
-  el.className='shell'; el.style.left=px+'px'; el.style.top=py+'px';
-  el.style.backgroundImage=`url(${src})`;
-  document.body.appendChild(el);
-  requestAnimationFrame(()=>el.classList.add('show'));
-  enableShellDrag(el);
-  shells.push({el,x:px,y:py});
+  const pool=Math.random()<0.8?COMMON:RARE; const src=pool[Math.floor(Math.random()*pool.length)];
+  const el=document.createElement('div'); el.className='shell'; el.style.left=px+'px'; el.style.top=py+'px';
+  el.style.backgroundImage=`url(${src})`; el.dataset.src=src;
+  document.body.appendChild(el); requestAnimationFrame(()=>el.classList.add('show'));
+  enableShellDrag(el); shells.push({el,x:px,y:py});
 }
 
-/* ====== 貝ドラッグ → バケツ吸い込み ====== */
-let count=0;
-function showBubble(text){ bubble.textContent=text; bubble.classList.add('show'); setTimeout(()=>bubble.classList.remove('show'),900); }
-
+/* === ドラッグでバケツ吸い込み === */
 function enableShellDrag(el){
   let pid=null, dx=0, dy=0;
   el.addEventListener('pointerdown',e=>{
@@ -205,7 +196,8 @@ function enableShellDrag(el){
     el.style.left=(e.clientX-dx)+'px'; el.style.top=(e.clientY-dy)+'px';
   },{passive:false});
   function end(e){
-    if(e.pointerId!==pid) return; e.preventDefault(); el.classList.remove('drag'); el.releasePointerCapture(pid); pid=null;
+    if(e.pointerId!==pid) return; e.preventDefault();
+    el.classList.remove('drag'); el.releasePointerCapture(pid); pid=null;
     const b=bucket.getBoundingClientRect(), s=el.getBoundingClientRect(), pad=18;
     const hit=!(s.right<b.left-pad || s.left>b.right+pad || s.bottom<b.top-pad || s.top>b.bottom+pad);
     if(hit){
@@ -218,23 +210,56 @@ function enableShellDrag(el){
   el.addEventListener('pointercancel',end,{passive:false});
 }
 
-/* ====== 砂の直接タッチ（WHOAIを使わず指でもOKに） ====== */
+/* === 指でも砂を削れる（保険） === */
 sand.addEventListener('pointerdown',e=>{ if(currentScene!=='beach')return; e.preventDefault(); brushAt(e.clientX,e.clientY);},{passive:false});
 sand.addEventListener('pointermove',e=>{ if(currentScene!=='beach'||e.pressure===0) return; e.preventDefault(); brushAt(e.clientX,e.clientY);},{passive:false});
 
-/* ====== ボタン / シーン ====== */
-document.getElementById('btnStart').onclick=()=>{
+/* === キャラ選択 === */
+const CHAR_LIST = [
+  'blue_closed.png','green_open.png','orange_closed.png','pink_closed.png','purple_closed.png',
+  'tane_green.png','tane_pink.png','tane_purple.png','tane_blue.png'
+].map(n=>`./assets/stage1/${n}`);
+
+const charPanel=document.getElementById('charPanel');
+const charGrid =document.getElementById('charGrid');
+
+function openCharPanel(){
+  // 初回だけ並べる
+  if(!charGrid.dataset.ready){
+    CHAR_LIST.forEach(src=>{
+      const div=document.createElement('div'); div.className='choice';
+      div.innerHTML=`<img src="${src}" alt=""><div>${src.split('/').pop().replace('.png','')}</div>`;
+      div.onclick=()=>{ whoai.src=src; whoaiWrap.style.display='block'; closeCharPanel(); say('いっしょに探そう'); };
+      charGrid.appendChild(div);
+    });
+    charGrid.dataset.ready='1';
+  }
+  charPanel.classList.add('show');
+}
+function closeCharPanel(){ charPanel.classList.remove('show'); }
+
+/* === ボタン === */
+document.getElementById('btnStart').onclick = ()=>{ openCharPanel(); /* 朝のまま */ };
+document.getElementById('btnBegin').onclick = ()=>{
   scene('beach'); say('砂をやさしくなでてみよう');
   resizeSand(); initDepth();
 };
-document.getElementById('btnNight').onclick=()=>{ scene('night'); say('今日はここまでにしようか'); };
+document.getElementById('btnNight').onclick = ()=>{
+  scene('night'); say('また明日');
+};
 
-/* ====== 初期化 ====== */
+/* === 初期化 === */
 function init(){
-  resizeSand(); scene('sunrise'); say('おはよう。朝日がきれいだね');
+  scene('sunrise'); say('おはよう。朝日がきれいだね');
+  resizeSand(); // 次のビーチに備えてキャンバスサイズ合わせ
 }
 addEventListener('resize', resizeSand);
 init();
+
+/* === スクロール抑止（保険） === */
+function blockScroll(e){ e.preventDefault(); }
+addEventListener('touchmove', blockScroll, {passive:false});
+addEventListener('wheel',      blockScroll, {passive:false});
 </script>
 </body>
 </html>
