--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,10 @@
 <style>
   body{margin:0;font-family:"Noto Sans JP",system-ui,sans-serif;background:#0b0b0b;color:#f6f6f6;line-height:1.9}
   .wrap{max-width:880px;margin:auto;padding:28px 16px}
-  h1{font-size:28px;margin:8px 0 12px}
+  h1{font-size:28px;margin:8px 0 12px}<img src="./public/assets/stage1/ako.png"
+     onerror="this.onerror=null; this.src='./public/assets/stage1/orange_closed.png';"
+     alt="ako" style="width:120px;height:120px;object-fit:contain;margin:8px 0;">
+
   h2{font-size:20px;margin:24px 0 8px;opacity:.95}
   p{opacity:.95}
   .card{background:#121212;border:1px solid #2a2a2a;border-radius:14px;padding:16px 18px;margin:12px 0}
